--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <properties>
 
         <assertj-core.version>3.3.0</assertj-core.version>
+        <aws-java-sdk-s3.version>1.10.72</aws-java-sdk-s3.version>
         <commons-lang.version>2.6</commons-lang.version>
         <evo.version>1.2.1</evo.version>
         <java.version>1.8</java.version>
@@ -35,12 +36,17 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
-        <ooxml-schemas.version>1.3</ooxml-schemas.version>
-        <poi-ooxml.version>3.14</poi-ooxml.version>
+        <ooxml-schemas.version>1.1</ooxml-schemas.version>
+        <poi-ooxml.version>3.13</poi-ooxml.version>
         <springfox.version>2.4.0</springfox.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>${aws-java-sdk-s3.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
