--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
         <groupId>org.springframework.boot</groupId>
-        <version>1.3.5.RELEASE</version>
+        <version>1.3.3.RELEASE</version>
     </parent>
     <groupId>com.adama</groupId>
     <artifactId>adama-parent</artifactId>
@@ -13,25 +13,28 @@
     <prerequisites>
         <maven>3.2.1</maven>
     </prerequisites>
+    <modules>
+        <module>adama-conf</module>
+        <module>adama-core</module>
+    </modules>
     <properties>
-        <adama-conf.version>0.0.1-SNAPSHOT</adama-conf.version>
-        <adama-core.version>0.1.0-SNAPSHOT</adama-core.version>
         <assertj-core.version>3.3.0</assertj-core.version>
         <aws-java-sdk-s3.version>1.11.8</aws-java-sdk-s3.version>
         <commons-lang.version>2.6</commons-lang.version>
+        <dependency.details.enabled>false</dependency.details.enabled>
+        <dependency.locations.enabled>false</dependency.locations.enabled>
         <evo.version>1.2.1</evo.version>
         <java.version>1.8</java.version>
         <javax.inject.version>1</javax.inject.version>
         <jsonwebtoken.version>0.6.0</jsonwebtoken.version>
-        <jsoup.version>1.8.3</jsoup.version>
+        <jsoup.version>1.9.2</jsoup.version>
         <lombok.version>1.16.8</lombok.version>
-        <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
-        <maven-sortpom-plugin.version>2.5.0</maven-sortpom-plugin.version>
         <maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
-        <ooxml-schemas.version>1.1</ooxml-schemas.version>
-        <poi.version>3.13</poi.version>
+        <ooxml-schemas.version>1.3</ooxml-schemas.version>
+        <poi.version>3.14</poi.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <servlet-api.version>2.5</servlet-api.version>
         <springfox.version>2.4.0</springfox.version>
     </properties>
@@ -40,7 +43,7 @@
             <dependency>
                 <groupId>com.adama</groupId>
                 <artifactId>adama-core</artifactId>
-                <version>${adama-core.version}</version>
+                <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.amazonaws</groupId>
@@ -84,46 +87,10 @@
                 <version>${springfox.version}</version>
             </dependency>
             <!-- <dependency> -->
-            <!-- <groupId>org.springframework.boot</groupId> -->
-            <!-- <artifactId>spring-boot-starter-data-mongodb</artifactId> -->
-            <!-- <version>${spring-boot.version}</version> -->
-            <!-- </dependency> -->
-            <!-- <dependency> -->
-            <!-- <groupId>org.springframework.boot</groupId> -->
-            <!-- <artifactId>spring-boot-starter-mail</artifactId> -->
-            <!-- <version>${spring-boot.version}</version> -->
-            <!-- </dependency> -->
-            <!-- <dependency> -->
-            <!-- <groupId>org.springframework.boot</groupId> -->
-            <!-- <artifactId>spring-boot-starter-security</artifactId> -->
-            <!-- <version>${spring-boot.version}</version> -->
-            <!-- </dependency> -->
-            <!-- <dependency> -->
-            <!-- <groupId>org.springframework.boot</groupId> -->
-            <!-- <artifactId>spring-boot-starter-test</artifactId> -->
-            <!-- <version>${spring-boot.version}</version> -->
-            <!-- <scope>test</scope> -->
-            <!-- </dependency> -->
-            <!-- <dependency> -->
-            <!-- <groupId>org.springframework.boot</groupId> -->
-            <!-- <artifactId>spring-boot-starter-thymeleaf</artifactId> -->
-            <!-- <version>${spring-boot.version}</version> -->
-            <!-- </dependency> -->
-            <!-- <dependency> -->
-            <!-- <groupId>org.springframework.boot</groupId> -->
-            <!-- <artifactId>spring-boot-starter-web</artifactId> -->
-            <!-- <version>${spring-boot.version}</version> -->
-            <!-- </dependency> -->
-            <!-- <dependency> -->
             <!-- <groupId>org.springframework.restdocs</groupId> -->
             <!-- <artifactId>spring-restdocs-mockmvc</artifactId> -->
             <!-- <version>${spring-boot.version}</version> -->
             <!-- <scope>test</scope> -->
-            <!-- </dependency> -->
-            <!-- <dependency> -->
-            <!-- <groupId>org.springframework.security</groupId> -->
-            <!-- <artifactId>spring-security-data</artifactId> -->
-            <!-- <version>${spring-boot.version}</version> -->
             <!-- </dependency> -->
             <dependency>
                 <groupId>io.swagger</groupId>
@@ -183,48 +150,41 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
-                <artifactId>spring-context-support</artifactId>
-                <version>4.2.6.RELEASE</version>
+                <artifactId>spring-framework-bom</artifactId>
+                <version>4.2.5.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-web</artifactId>
-                <version>4.3.0.RELEASE</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-mongodb</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework</groupId>
-                <artifactId>spring-webmvc</artifactId>
-                <version>4.2.6.RELEASE</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-mail</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-commons</artifactId>
-                <version>1.12.2.RELEASE</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework.data</groupId>
-                <artifactId>spring-data-mongodb</artifactId>
-                <version>1.8.4.RELEASE</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <version>${spring-boot.version}</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-config</artifactId>
-                <version>4.0.3.RELEASE</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-thymeleaf</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-core</artifactId>
-                <version>4.0.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-data</artifactId>
-                <version>4.0.3.RELEASE</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.security</groupId>
-                <artifactId>spring-security-web</artifactId>
-                <version>4.0.3.RELEASE</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -250,7 +210,7 @@
                 <plugin>
                     <groupId>com.github.ekryd.sortpom</groupId>
                     <artifactId>sortpom-maven-plugin</artifactId>
-                    <version>${maven-sortpom-plugin.version}</version>
+                    <version>2.5.0</version>
                     <executions>
                         <execution>
                             <phase>verify</phase>
@@ -294,7 +254,7 @@
                         <dependency>
                             <groupId>com.adama</groupId>
                             <artifactId>adama-conf</artifactId>
-                            <version>${adama-conf.version}</version>
+                            <version>${project.version}</version>
                         </dependency>
                     </dependencies>
                     <configuration>
@@ -316,7 +276,7 @@
                         <dependency>
                             <groupId>com.adama</groupId>
                             <artifactId>adama-conf</artifactId>
-                            <version>${adama-conf.version}</version>
+                            <version>${project.version}</version>
                         </dependency>
                     </dependencies>
                     <configuration>
@@ -333,8 +293,6 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.5.1</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
                         <encoding>UTF-8</encoding>
                     </configuration>
                 </plugin>
@@ -355,7 +313,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>${maven-enforcer-plugin.version}</version>
+                    <version>1.4.1</version>
                     <executions>
                         <execution>
                             <id>enforce-versions</id>
@@ -434,6 +392,11 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.19.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.6</version>
                 </plugin>
                 <plugin>
                     <groupId>org.asciidoctor</groupId>
