--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>spring-boot-starter-parent</artifactId>
         <groupId>org.springframework.boot</groupId>
-        <version>1.3.3.RELEASE</version>
+        <version>1.3.5.RELEASE</version>
     </parent>
     <groupId>com.adama</groupId>
     <artifactId>adama-parent</artifactId>
@@ -16,8 +16,10 @@
     <modules>
         <module>adama-conf</module>
         <module>adama-core</module>
+        <module>adama-swagger</module>
     </modules>
     <properties>
+        <adama-api.version>0.1.0-SNAPSHOT</adama-api.version>
         <assertj-core.version>3.3.0</assertj-core.version>
         <aws-java-sdk-s3.version>1.11.8</aws-java-sdk-s3.version>
         <commons-lang.version>2.6</commons-lang.version>
@@ -43,7 +45,12 @@
             <dependency>
                 <groupId>com.adama</groupId>
                 <artifactId>adama-core</artifactId>
-                <version>${project.version}</version>
+                <version>${adama-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.adama</groupId>
+                <artifactId>adama-swagger</artifactId>
+                <version>${adama-api.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.amazonaws</groupId>
@@ -151,7 +158,7 @@
             <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-framework-bom</artifactId>
-                <version>4.2.5.RELEASE</version>
+                <version>4.2.6.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -254,7 +261,7 @@
                         <dependency>
                             <groupId>com.adama</groupId>
                             <artifactId>adama-conf</artifactId>
-                            <version>${project.version}</version>
+                            <version>${adama-api.version}</version>
                         </dependency>
                     </dependencies>
                     <configuration>
@@ -276,7 +283,7 @@
                         <dependency>
                             <groupId>com.adama</groupId>
                             <artifactId>adama-conf</artifactId>
-                            <version>${project.version}</version>
+                            <version>${adama-api.version}</version>
                         </dependency>
                     </dependencies>
                     <configuration>
