--- a/adama-core/pom.xml
+++ b/adama-core/pom.xml
@@ -163,6 +163,11 @@
         </dependency>
     </dependencies>
     <build>
-        <plugins />
+        <plugins>
+            <plugin>
+                <groupId>net.revelc.code</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 </project>
